# gusto_backend

./: .dockerignore  .env.example  .gitignore  API_ENDPOINTS.md  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/ai-agent-service/: Dockerfile  README.md  package.json  payload.json  pyproject.toml
apps/ai-agent-service/src/: config.py  main.py
apps/ai-agent-service/src/clients/: claude_client.py
apps/ai-agent-service/src/scout/: agent.py  graph.py  prompts.py  schemas.py  state.py
apps/ai-agent-service/src/scout/nodes/: budget_filter.py  diet_guard.py  ranker.py  tagger.py
apps/ai-agent-service/tests/: conftest.py  test_budget_filter.py  test_diet_guard.py  test_graph.py  test_schemas.py
apps/api-gateway/: Dockerfile  README.md  package.json  tsconfig.json
apps/auth-service/: Dockerfile  README.md  package.json  tsconfig.json
apps/coupon-optimization-service/: Dockerfile  README.md  coupon-optimization-algorithm-design.md  package.json  tsconfig.json
apps/escrow-service/: Dockerfile  README.md  jest.config.js  package.json
apps/mcp-gateway-service/: Dockerfile  README.md  package.json
apps/notification-service/: Dockerfile  README.md  package.json
apps/orchestrator-service/: Dockerfile  README.md  package.json
apps/order-execution-service/: Dockerfile  README.md  package.json
apps/scheduler-service/: Dockerfile  README.md  package.json
docs/: developer_documentation.md
scripts/: bootstrap.sh  stub-ai-agent-service.js
(+218 files in other folders)
